--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -28,12 +28,12 @@ $red:     #E74C3C !default;
 $orange:  #fd7e14 !default;
 $yellow:  #F39C12 !default;
 // $green:   #18BC9C !default;
-$green:   #18bc49 !default;
+$green:   #99C355 !default;
 $teal:    #20c997 !default;
 $cyan:    #3498DB !default;
 
 // $primary:       $blue !default;
-$primary:       #2c59fb !default;
+$primary:       #4C4842 !default;
 $secondary:     $gray-800 !default;
 $success:       $green !default;
 $info:          #ff0084 !default;
