--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12468,6 +12468,16 @@ h6 {
   text-align: center;
 }
 
+.logo-home {
+  max-height: 120px;
+  max-width: 300px;
+}
+
+.logo-home-smaller {
+  max-height: 60px;
+  max-width: 300px;
+}
+
 #calendarHeader img {
   max-width: 250px;
 }
