--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12701,6 +12701,14 @@ h6 {
   cursor: pointer;
 }
 
+.goal-marker {
+  width: 25px;
+  height: 25px;
+  border-radius: 25px;
+  cursor: pointer;
+  border: 2px solid #FFF;
+}
+
 .mapboxgl-popup {
   max-width: 230px;
 }
@@ -12710,6 +12718,14 @@ h6 {
 }
 
 .mapboxgl-popup .mapboxgl-popup-content .report-popup p.report-title {
+  line-height: normal;
+  font-size: 0.875rem;
+  margin-bottom: 10px;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 700;
+}
+
+.mapboxgl-popup .mapboxgl-popup-content .goal-popup p.goal-title {
   line-height: normal;
   font-size: 0.875rem;
   margin-bottom: 10px;
