--- a/resources/sass/_portal.scss
+++ b/resources/sass/_portal.scss
@@ -177,6 +177,19 @@
   }
 }
 
+#post-footer{
+  .footer-logo {
+    margin: 0 10px 15px;
+    max-height: 60px;
+    max-width: 110px;
+  }
+  .footer-logo-eu {
+    margin: 0 10px 15px;
+    max-height: 35px;
+    max-width: 110px;
+  }
+}
+
 .about-portal-header {
   background: url('/img/citybg.jpg');
   background-size: cover;
